--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "markdown-it-sup": "^1.0.0",
     "markdown-it-task-lists": "^2.1.1",
     "vuepress": "^1.9.7",
+    "vuepress-plugin-comment": "^0.7.3",
     "vuepress-plugin-fulltext-search": "^2.2.1",
     "vuepress-plugin-one-click-copy": "^1.0.6",
     "vuepress-plugin-pangu": "^1.0.1",
